<resources>
    <string name="app_name">medico</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="confirm_password">Confirm password :</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="create_new_account">create new account</string>
    <string name="registration">Registration</string>
    <string name="username">Username :</string>
    <string name="age">Age :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone Number :</string>
    <string name="name">Name :</string>
    <string name="is_patient">I am a patient</string>
    <string name="assistant_name">Assitant Name :</string>
    <string name="assistant_phone">Assistant Phone Number :</string>
    <string name="emergency_num">Emergency Number :</string>
    <string name="blood_type">Blood Type :</string>

    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

</resources>