<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AcceuilApp.RegistrationActivity">

    <LinearLayout
        android:id="@+id/page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- bg orange -->
        <LinearLayout
            android:id="@+id/bg_orange"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </LinearLayout>

        <!-- Registration -->
        <TextView
            android:id="@+id/registration_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:text="@string/registration"
            android:textAppearance="@style/registration" />

        <TextView
            android:id="@+id/username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="@string/username"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_account_circle_24"
            android:paddingLeft="25dp"

            android:hint="Username :"
            android:shadowRadius="10" />

        <TextView
            android:id="@+id/birthday_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:gravity="top"
            android:text="@string/age"
            android:textAppearance="@style/username" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_today_24"
            android:hint="@string/age"
            android:paddingLeft="25dp"
            android:inputType="number"
            android:shadowRadius="10"

            />

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/email"
            android:textAppearance="@style/email" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_mail_outline_24"
            android:hint="Email :"
            android:inputType="textEmailAddress"

            android:paddingLeft="25dp"
            android:shadowRadius="10"

            />

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"

            android:layout_marginEnd="39.5dp"
            android:text="@string/password"
            android:textAppearance="@style/password" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20.5dp"
                android:layout_marginEnd="39.5dp"
                android:background="@drawable/rectangle"
                android:hint="Password :"
                android:paddingLeft="25dp"

                android:inputType="textPassword"
                android:shadowRadius="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirm_password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:gravity="top"
            android:text="@string/confirm_password"
            android:textAppearance="@style/password" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:hint="Confirm password :"
            android:inputType="textPassword"
            android:paddingLeft="25dp"

            android:shadowRadius="10" />

        <TextView
            android:id="@+id/adresse_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/address"
            android:textAppearance="@style/address" />

        <EditText
            android:id="@+id/adresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_location_on_24"
            android:hint="Your adresse :"
            android:paddingLeft="25dp"
            android:shadowRadius="10"

            />

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/phone"
            android:textAppearance="@style/phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_local_phone_24"
            android:hint="+216 xxxxxxxx"
            android:shadowRadius="10"
            android:digits="0123456789"
            android:inputType="phone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_gravity="left"
                android:text="Visible"
                android:textColor="@color/white"
                android:checked="false"
                />
            <TextView
                android:id="@+id/Is_Patient_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="39.5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/is_patient"
                android:textAppearance="@style/is_patient" />
        </LinearLayout>

        <TextView
            android:id="@+id/assistant_phone_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/assistant_phone"
            android:visibility="invisible"
            android:textAppearance="@style/assistant_phone" />

        <EditText
            android:visibility="invisible"
            android:id="@+id/assistant_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_local_phone_24"
            android:hint="+216 xxxxxxxx"
            android:shadowRadius="10"
            android:digits="0123456789"
            android:inputType="phone"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/blood_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20.5dp"
                android:layout_marginEnd="39.5dp"
                android:text="@string/blood_type"
                android:visibility="invisible"
                android:textAppearance="@style/blood_type" />
            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </LinearLayout>

        <TextView
            android:id="@+id/emergency_num_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:text="@string/emergency_num"
            android:visibility="invisible"
            android:textAppearance="@style/emergency_num" />

        <EditText
            android:visibility="invisible"
            android:id="@+id/emergency_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20.5dp"
            android:layout_marginEnd="39.5dp"
            android:background="@drawable/rectangle"
            android:drawableEnd="@drawable/ic_baseline_local_phone_24"
            android:hint="+216 xxxxxxxx"
            android:shadowRadius="10"
            android:digits="0123456789"
            android:inputType="phone"
            />
        <Button
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:background="@drawable/rectangle_btn"
            android:onClick="Register"
            android:text="Register"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>