<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AcceuilApp.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/lineartop"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/email_txt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/medico_logo" />

        </LinearLayout>

        <TextView
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/email"
            android:textAppearance="@style/email"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@id/lineartop"
            tools:layout_conversion_absoluteHeight="17dp"
            tools:layout_conversion_absoluteWidth="41dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:hint="Email :"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp"
            android:shadowRadius="10"
            app:layout_constraintBottom_toTopOf="@+id/passwordTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_txt" />

        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/password"
            android:textAppearance="@style/password"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="69dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle"
                android:hint="Password :"
                android:inputType="textPassword"
                android:paddingLeft="25dp"
                android:shadowRadius="10"

                />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Forgot password? -->
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/rectangle_btn"
            android:elevation="20dp"
            android:onClick="Login"
            android:text="Login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_conversion_absoluteHeight="95dp"
            tools:layout_conversion_absoluteWidth="351dp" />


        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login">

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/montserratregular"
                android:onClick="showForgotPassword"
                android:text="@string/forgot_pass"
                android:textAlignment="center"
                android:textAppearance="@style/forgot_pass"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="199dp"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="674dp" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/montserratregular"
                android:onClick="showRegister"
                android:text="@string/create_new_account"
                android:textAlignment="center"
                android:textAppearance="@style/create_new_account"
                tools:layout_conversion_absoluteHeight="19dp"
                tools:layout_conversion_absoluteWidth="213dp"
                tools:layout_editor_absoluteX="223dp"
                tools:layout_editor_absoluteY="674dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>